service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-k8s
  labels:
    app: hello-k8s
spec:
  type: ClusterIP
  selector:
    app: hello-k8s
  ports:
    - port: 80
      targetPort: 80
